--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=backend
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.application.name=review-pilot
+spring.redis.database=0
