--- a/extractor/src/main/resources/application.properties
+++ b/extractor/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=extractor
 spring.redis.host=localhost
 spring.redis.port=6379
 
+github.token=<GITHUB_PERSONAL_ACCESS_TOKEN>
+
 server.port=8081
+spring.redis.database=0
